Revert "i will crash the fuck out"
This reverts commit a9aeeff5de07962d2bf8e14ffe42c5e61d68d6fd.

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -9,11 +9,9 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.v1peridae.sense"
+      "supportsTablet": true
     },
     "android": {
-      "package": "com.v1peridae.sense",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
