--- a/frontend/app.json
+++ b/frontend/app.json
@@ -10,10 +10,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.v1peridae.sense",
-      "buildNumber": "1.0.0",
+      "bundleIdentifier": "me.v1peridae.sense",
       "infoPlist": {
-        "LSApplicationQueriesSchemes": []
+        "LSApplicationQueriesSchemes": [],
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
@@ -21,7 +21,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.v1peridae.sense",
+      "package": "me.v1peridae.sense",
       "edgeToEdgeEnabled": true
     },
     "web": {
