profile page done!

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -40,7 +40,14 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app needs access to your photos.",
+          "cameraPermission": "The app needs access to your camera."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
