days since last crashout - ZERO

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.2",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
