--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-image-picker": "~16.0.5",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.3",
