--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,4 +1,13 @@
+version: "3.9"
 services:
+  api:
+    build: .
+    ports:
+      - "3000:3000"
+    env_file: .env
+    depends_on:
+      - postgres
+    restart: unless-stopped
   postgres:
     image: postgres:15
     container_name: budget-db
