--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npx prisma generate && npx prisma migrate deploy",
+    "postinstall": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +31,8 @@
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
     "uuid": "^11.1.0",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "prisma": "^6.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
@@ -38,7 +41,6 @@
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.8.2",
     "supertest": "^7.1.0"
   }
 }
