--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,9 +5,11 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci --omit=dev
 
-COPY . .
+COPY prisma ./prisma/
 
 RUN npx prisma generate
+
+COPY . .
 
 EXPOSE 3000
 
