--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npx prisma generate && npx prisma migrate deploy",
-    "postinstall": "npx prisma generate"
+    "migrate": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
