--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
-    "start": "node server.js",
+    "start": "npx prisma migrate deploy && node server.js",
     "dev": "nodemon server.js",
-    "migrate": "npx prisma migrate deploy"
+    "migrate": "npx prisma migrate deploy",
+    "postinstall": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
