--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "start": "npx prisma migrate deploy && node server.js",
     "dev": "nodemon server.js",
+    "debug": "node debug.js",
     "migrate": "npx prisma migrate deploy",
     "postinstall": "npx prisma generate"
   },
